--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,8 @@
 :root {
-    /* Primary */
-    --veryDarkDesaturatedBlue: hsl(238, 29%, 16%);
-    --softRed: hsl(14, 88%, 65%);
-    --softViolet: hsl(273, 75%, 66%);
-    --softBlue: hsl(240, 73%, 65%);
-    /* Neutral */
-    --veryDarkGrayishBlue: hsl(237, 12%, 33%);
-    --DarkGrayishBlue: hsl(240, 6%, 50%);
-    --lightGrayishBlue: hsl(240, 5%, 91%);
+    --veryDarkGrayishBlue: hsl(217, 19%, 35%);
+    --desaturatedDarkBlue: hsl(214, 17%, 51%);
+    --grayishBlue: hsl(212, 23%, 69%);
+    --lightGrayishBlue: hsl(210, 46%, 95%);
 }
 
 * {
@@ -17,155 +12,211 @@
 }
 
 body {
-    font-family: 'Kumbh Sans', sans-serif;
-    color: var(--veryDarkDesaturatedBlue);
-    font-size: 12px;
-    background: linear-gradient(var(--softViolet), var(--softBlue));
+    font-family: 'Manrope', sans-serif;
+    font-size: 13px;
+    color: var(--veryDarkGrayishBlue);
+    background-color: var(--lightGrayishBlue);
     min-height: 100vh;
-    max-width: 327px;
-    margin-inline: auto;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-    text-align: center;
+    align-items: center;
 }
 
 main {
-    border-radius: 20px;
-    margin: 10rem 1.5rem 5rem;
-    box-shadow: 0px 15px 25px -10px var(--veryDarkGrayishBlue);
+    margin: 4rem 1.5rem;
+    border-radius: 10px;
     background-color: white;
-    padding: 0 1.5rem 3rem;
+    box-shadow: 0 5px 20px -12px var(--grayishBlue);
+}
+
+main > span img {
+    width: 100%;
+    border-radius: 10px 10px 0 0;
     display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
-    min-width: 327px;
-    position: relative;
 }
 
-main::before {
-    position: absolute;
-    content: '';
-    background-image: url(images/illustration-woman-online-mobile.svg);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    height: 240px;
-    width: 240px;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%, -45%);
-}
-
-/* Section */
 section {
+    padding: 2.5rem 2rem 1rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    position: relative;
 }
 
 h1 {
-    font-size: 2rem;
-    margin-bottom: .5rem;
-}
-
-a {
-    text-align: left;
-    display: flex;
-    justify-content: space-between;
-}
-
-a:hover {
-    cursor: pointer;
-    color: var(--softRed);
+    font-size: 1rem;
 }
 
 p {
-    padding-inline-end: 1.25rem;
-    text-align: left;
-    color: var(--DarkGrayishBlue);
+    color: var(--desaturatedDarkBlue);
+    line-height: 1.25rem;
 }
 
-hr {
-    border: none;
-    border-top: 1px solid var(--lightGrayishBlue);
+section > div {
+    margin-top: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-/* JavaScript Classes */
-.hidden-p {
-    display: none;
+.div-absolute {
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: var(--grayishBlue);
+    padding: 1rem 2rem;
+    height: 65px;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    background-color: var(--veryDarkGrayishBlue);
+    border-radius: 0 0 10px 10px;
+    scale: 0;
+}
+
+.clicked {
+    scale: 1;
     transition: 200ms ease-in-out;
 }
 
-.selected-a {
-    font-weight: 700;
-    transition: 200ms ease-in-out;
+.div-absolute > div img {
+    width: 20px;
+    height: 20px;
 }
 
-.selected-a img {
-    transform: rotate(180deg);
-    transition: 200ms ease-in-out;
+h3 {
+    letter-spacing: 4px;
+    font-weight: 300;
+    font-size: .8rem;
 }
 
-/* Desktop */
-@media screen and (min-width: 1100px) {
+section > div > div {
+    display: flex;
+    align-items: center;
+    gap: .75rem;
+}
+
+section > div > div > span img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+    display: flex;
+}
+
+section > div > span:hover {
+    cursor: pointer;
+    background-color: var(--desaturatedDarkBlue);
+}
+
+section > div > span:hover img {
+    filter: brightness(0) invert(1);
+}
+
+section > div > span {
+    background-color: var(--lightGrayishBlue);
+    border-radius: 50px;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+h2 {
+    font-size: .75rem;
+}
+
+section > div p {
+    font-size: .75rem;
+    opacity: .7;
+}
+
+@media screen and (min-width:1000px) {
     body {
-        font-size: 14px;
-        text-align: left;
+        font-size: 16px;
     }
     
     main {
-        border-radius: 25px;
-        margin: 5rem;
-        width: 1000px;
-        height: 510px;
-        box-shadow: 0px 15px 40px -15px var(--veryDarkDesaturatedBlue);
-        padding: 4rem 7rem 0;
-        flex-direction: row;
-        background-image: url(images/illustration-woman-online-desktop.svg), url(images/bg-pattern-desktop.svg);
-        background-repeat: no-repeat;
-        background-size: auto, 100%;
-        background-position: left -90px top 50%, left -615px top -300px;
+        /* margin: 4rem 1.5rem; */
+        box-shadow: 0 10px 40px -20px var(--grayishBlue);
+        display: flex;
+        width: 875px;
     }
 
-    main > picture {
+    main > span {
+        display: flex;
+        flex-basis: 110%;
+    }
+    
+    main > span img {
+        border-radius: 10px 0 0 10px;
+    }
+    
+    section {
+        padding: 2rem 3rem;
+    }
+    
+    h1 {
+        font-size: 1.5rem;
+    }
+    
+    p {
+        line-height: 1.5rem;
+    }
+    
+    h2 {
+        font-size: .9rem;
+    }
+    
+    section > div p {
+        font-size: .9rem;
+    }
+
+
+    .div-absolute {
+        justify-content: center;
+        height: 60px;
+        width: 275px;
+        right: -75px;
+        bottom: 100px;
+        left: unset;
+        border-radius: 10px;
+    }
+
+    .div-absolute::after {
+        position: absolute;
+        content: '';
+        clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+        background-color: var(--veryDarkGrayishBlue);
+        height: 30px;
+        width: 30px;
+        bottom: 0;
+        left: 50%;
+        transform: translate(-50%, 50%);
+    }
+
+    .div-absolute > span {
         display: none;
     }
     
-    main::before {
-        background-image: url(images/illustration-box-desktop.svg);
-        background-repeat: no-repeat;
-        background-size: 100%;
-        height: 175px;
-        width: 175px;
-        left: 0;
-        top: 57%;
-        animation: boxHop 3s ease-in-out;
-        animation-iteration-count: infinite;
-    }
-
-    /* Section */
-    section {
-        width: 50%;
-        margin-left: auto;
+    .clicked {
+        scale: 1;
+        transition: 200ms ease-in-out;
     }
     
-    /*  */
-    h1 {
-        font-size: 2.4rem;
-        margin-bottom: 1rem;
+    .unclick {
+        scale: 1;
+        transition: 200ms ease-in-out;
     }
-
-    /* Animation */
-    @keyframes boxHop {
-        from {
-            transform: translate(-50%, -80px);
-        }
-        50% {
-            transform: translate(-50%, -90px);
-        }
-        to {
-            transform: translate(-50%, -80px);
-        }
+    
+    .div-absolute > div img {
+        width: 30px;
+        height: 30px;
+    }
+    
+    h3 {
+        font-size: 1rem;
     }
 }
